# zhinengfuping

./: CMakeLists.txt  README.md  http_manager.c  iotest.c  main.c  page_alarm.c  page_conf.h  page_dialog.c  page_main.c  page_setting.c  page_test.c  rebuild.sh  wpa_manager.c  wpa_manager.h
知识点总结/: OSAL封装抽象层知识点.txt  wifi开发知识点.txt  主页开发知识点.txt  关于回调函数.txt  开发前必看！！！.txt  文件永久储存知识点.txt  最终阶段知识点.txt  设置页面开发知识点.txt  音频开发知识点.txt
